<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayoutItemContainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imgVwThumbnail"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="left"
        android:contentDescription="@string/none"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/LinearLayoutTextContents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/all_pourpose_padding" >

        <TextView
            android:id="@+id/txtVwLocationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_name_def"
            android:textAppearance="@style/itemListLevel01" />

        <LinearLayout
            android:id="@+id/LinearLayoutTempertures"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtVwMinTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min_temp_def"
                android:textAppearance="@style/itemListLevel02Min" />

            <TextView
                android:id="@+id/txtVwMaxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max_temp_def"
                android:textAppearance="@style/itemListLevel03Max" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtVwDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_def" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtVwActTemp"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="0.2"
        android:gravity="right|center_vertical"
        android:paddingRight="@dimen/all_pourpose_padding"
        android:text="@string/act_temp_def"
        android:textAppearance="@style/itemListLevel00" />

</LinearLayout>
